--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,8 +75,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('libs/commons-lang3-3.7.jar')
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.jakewharton:butterknife:8.8.0'
@@ -92,4 +90,5 @@ dependencies {
     compile 'com.rmtheis:tess-two:9.0.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
+    compile files('libs/poi-3.12-android-a.jar')
 }
